<resources>
    <string name="app_name">TravelJournal</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="trip_name">Trip Name</string>
    <string name="destination">Destination</string>
    <string name="trip_type">Trip Type</string>
    <string name="price_eur">Price(eur)</string>
    <string name="start_date">Start Date</string>
    <string name="city_break">City break</string>
    <string name="sea_side">Sea side</string>
    <string name="mountains">Mountains</string>
    <string name="save">SAVE</string>
    <string name="raiting">Raiting</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="end_date">End Date</string>
    <string name="click">flag</string>
    <string name="picture">Picture</string>
    <string name="gallery_photo">Gallery Photo</string>
    <string name="take_picture">Take Picture</string>
    <string name="single_click">Single Click on position:</string>
    <string name="long_click">Long press on position:</string>
    <string name="button_item">Button in item click:</string>
</resources>
