<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/space_16"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_8dp"
        android:text="@string/trip_name"
        android:textStyle="bold"
        android:textSize="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_info_outline_black_24dp"
        android:id="@+id/trip_name"
        android:layout_marginBottom="@dimen/size_8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_8dp"
        android:text="@string/destination"
        android:textStyle="bold"
        android:textSize="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/destination"
        android:drawableLeft="@drawable/ic_location_on_black_24dp"
        android:layout_marginBottom="@dimen/size_8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_8dp"
        android:text="@string/trip_type"
        android:textStyle="bold"
        android:textSize="15dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/trip_type"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_break"
            android:id="@+id/city_break"
            android:layout_marginRight="@dimen/size_10dp"
            android:textColor="@color/grey"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sea_side"
            android:id="@+id/sea_side"
            android:layout_marginRight="@dimen/size_10dp"
            android:textColor="@color/grey"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mountains"
            android:id="@+id/mountains"
            android:layout_marginRight="@dimen/size_10dp"
            android:layout_marginBottom="@dimen/size_8dp"
            android:textColor="@color/grey"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_8dp"
        android:text="@string/price_eur"
        android:textStyle="bold"
        android:textSize="15dp" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/price"
        android:layout_margin="@dimen/size_8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_8dp"
            android:text="@string/start_date"
            android:id="@+id/start_date"
            android:layout_marginRight="@dimen/size_110dp"
            android:onClick="btnDatePickerOnClick"
            android:textStyle="bold"
            android:textSize="@dimen/size_15dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_8dp"
            android:onClick="btnDatePickerOnClick"
            android:text="@string/end_date"
            android:id="@+id/end_date"
            android:textSize="@dimen/size_15dp"
            android:textStyle="bold" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_8dp"
        android:text="@string/raiting"
        android:textSize="@dimen/size_15dp"
        android:textStyle="bold" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:id="@+id/rating_trip"
        android:layout_marginBottom="@dimen/size_8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_8dp"
        android:text="@string/picture"
        android:textSize="@dimen/size_15dp"
        android:textStyle="bold" />
    <ImageView
        android:layout_width="wrap_content"
        android:id="@+id/new_image"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnGallery"
            android:onClick="btnTakePhotoFromGallery"
            android:layout_marginBottom="@dimen/size_8dp"
            android:text="@string/gallery_photo"
            android:layout_marginRight="@dimen/size_50dp"
            android:textStyle="bold"
            android:textSize="@dimen/size_15dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCamera"
            android:onClick="btnTakePhoto"
            android:layout_marginBottom="@dimen/size_8dp"
            android:text="@string/take_picture"
            android:textSize="@dimen/size_15dp"
            android:textStyle="bold" />


    </LinearLayout>



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/button_save"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:onClick="OnButtonClickSaveTrip"
        android:padding="@dimen/size_8dp"/>



</LinearLayout>